Bug 352044 - Regression: kAddressbook 5.0.0 only shows 2D barcodes for first contact displayed
Summary: Regression: kAddressbook 5.0.0 only shows 2D barcodes for first contact displ...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-31 00:10 UTC by Gunter Ohrner
Modified: 2015-08-31 05:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2015-08-31 00:10:07 UTC
kAddressbook only shows data matrix and QR codes for the first contact displayed. Switching to another contact only shows two "empty paper" symbols where the 2D barcodes should have been.

(Not that I'd need these barcodes... ;)

Reproducible: Always
Comment 1 Laurent Montel 2015-08-31 04:45:19 UTC
I confirm it.
Comment 2 Laurent Montel 2015-08-31 05:31:28 UTC
Git commit 84724fa132b983266d8cd2b036d5a0f75a78ca46 by Montel Laurent.
Committed on 31/08/2015 at 05:30.
Pushed by mlaurent into branch 'frameworks'.

Fix Bug 352044 - Regression: kAddressbook 5.0.0 only shows 2D barcodes for first contact displayed

FIXED-IN: 1.2.1

M  +1    -1    lib/CMakeLists.txt
M  +2    -0    lib/prison/abstractbarcode.cpp

http://commits.kde.org/prison/84724fa132b983266d8cd2b036d5a0f75a78ca46
Comment 3 Laurent Montel 2015-08-31 05:38:04 UTC
Git commit 6ddf29130688eee640ea52115f58a24a1bfa7173 by Montel Laurent.
Committed on 31/08/2015 at 05:37.
Pushed by mlaurent into branch 'Applications/15.08'.

Workaround for bug 352044. We don't need in master as I fixed libprison.

M  +10   -6    akonadi-contact/src/contactviewer.cpp

http://commits.kde.org/kdepimlibs/6ddf29130688eee640ea52115f58a24a1bfa7173