Fix Bug 352044 - Regression: kAddressbook 5.0.0 only shows 2D barcodes for first contact displayed

FIXED-IN: 1.2.1
BUG: 352044